Fix right overflow

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -545,7 +545,6 @@ figcaption h5{
 #contactcontainer div form{
     margin-left: 10%;
     margin-top:1em;
-    width:100%;
     height:8em;
     display:flex;
     flex-direction: column;
